[package]
name = "osc-mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "*", default-features = false, features = ["websocket"]}
tokio = { version = "1", features = ["full"] }
rosc = "~0.5"
clap = {version = "3.0.0-beta.5", features=["derive"]}
lazy_static = "1.4.0"
log = "0.4.14"
simplelog = "0.11.0"
smallvec = "1.7.0"
dashmap = "4.0.2"